--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@ setTimeout(() => {
                 <sw id="Logos"></sw>
                 <div class="title-gallery"><div class="xsw2">Logos</div></div>
                 <div class="category gallery" id="category1"></div>
-                <div class="title-gallery"><div class="xsw2">Emoji</div></div>
-                <div class="category gallery" id="category2"></div>
+                <div class="title-gallery"><div class="xsw2" style="display: none;">Emoji</div></div>
+                <div class="category gallery" id="category2" style="display: none;"></div>
                 <div class="category gallery" style="display: none;" id="category3"></div>
                 
                 <!-- download-app -->
@@ -836,6 +836,15 @@ setTimeout(() => {
         <button id="custom-alert-cancel" class="Wave-cloud">الغاء</button>
     </div>
   </div>
+</div>
+
+<div class="canyon-12E-34x5">
+  <a class="Wave-cloud">Back</a>
+  <a class="Wave-cloud">Reload<sas>Ctrl+R</sas></a>
+  <a class="Wave-cloud">Copy</a>
+  <a class="Wave-cloud">Copy image</a>
+  <a class="Wave-cloud">Download image</a>
+  <a class="Wave-cloud">Share</a>
 </div>
 
 <div id="menu-overlay" style="display: none;"></div>
