--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ setTimeout(() => {
                     <div class="download-app-img_button">
                       <button class="Wave-cloud" id="btnHideWindow"><ion-icon name="stop"></ion-icon></button>
                     </div>
-                    <div class="cany">نظام Canyon icon</div>
+                    <div class="cany">Canyon icon</div>
                   </div>
 
                 </div>
@@ -793,7 +793,7 @@ setTimeout(() => {
             </div>
           </div>
           <!-- ---- -->
-          <div class="ad-container"></div>
+          <div class="ad-container Wave-cloud"></div>
           <!-- ---- -->
           <lin>Can QR 2025 Edition</lin>
         </div>
