--- a/index.html
+++ b/index.html
@@ -595,8 +595,8 @@ setTimeout(() => {
         <div class="Links-web">
           <div class="Links-web-div">
             <a  href="https://creativecloudsit.com/" target="_blank" class="Links-web-logo notranslate llo"><span class="only"></span>Creative Clouds IT</a>
-            <a class="noons" style="cursor: pointer;" onclick="window.open('https://ionicframework.com/', '_blank')"><img src="https://ionic.io/ionicons/assets/img/ionic-os-logo.png" alt="" style="height: 20px;margin-right: 5px;">Source Ion icon</a>
-            <a class="Links-web-link">Privacy policy<span class="spana" data-original-color="rgb(105, 115, 132)"></span></a> 
+            <button class="noons open-link" onclick="window.open('https://ionicframework.com/', '_blank')"><img src="https://ionic.io/ionicons/assets/img/ionic-os-logo.png" alt="" style="height: 20px;margin-right: 5px;">Source Ion icon</button>
+            <button class="Links-web-link open-link">Privacy policy<span class="spana" data-original-color="rgb(105, 115, 132)"></span></button> 
           </div>
         </div>
 
