--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@ setTimeout(() => {
                       <div class="history-link ccd Wave-cloud ou show-btn layer" data-target="wwc24" style="margin: 0;"><i id="" class="fi fi-rr-share"></i></div>
                       <div class="Everyone-menu vov box-shadow xox on_click menu3" style="right: 0;width: max-content;max-width: max-content;" id="wwc24">
                         <div id="category-navigation">
-                          <a class="Wave-cloud Click_focus xxse" id="copyShareLinkButton">Copy link<ion-icon name="copy-outline"></ion-icon></a>
+                          <a class="custom-btn Wave-cloud Click_focus xxse" id="copyShareLinkButton">Copy link<ion-icon name="copy-outline"></ion-icon></a>
                           <on-liy class="onliy-hr"></on-liy>
-                          <a class="Wave-cloud Click_focus xxse" id="openLinkButton">Open In New<ion-icon name="open-outline"></ion-icon></a>
+                          <a class="custom-btn Wave-cloud Click_focus xxse" id="openLinkButton">Open In New<ion-icon name="open-outline"></ion-icon></a>
                           <div class="qr_on_div" style="overflow: visible;"><input style="user-select: all;" type="text" id="popupShareLink" readonly></div>
                         </div>
                       </div>
@@ -298,7 +298,7 @@ setTimeout(() => {
             <div class="download-fonts">
               <div class="download-fonts-button tool2-div-divs show-btn vov" data-target="wwc15" id="sizeDisplay">36</div>
               <!-- --- -->
-              <div class="sheets box-shadow on_click visible xox" style="margin-top: 4px;width: 39px;max-height: 180px;display: block;" id="wwc15">
+              <div class="sheets box-shadow on_click visible xox" style="margin-top: 4px;width: 39px;max-height: 180px;display: block;animation: eew 0.3s ease forwards;" id="wwc15">
                 <div class="sheets-menu" id="sizeSelector">
                   <button class="button_1_color Click_focus" id="resize24">24</button>
                   <button class="button_1_color Click_focus" id="resize28">28</button>
